--- a/Dia-04-HTML5-Form-Input.html
+++ b/Dia-04-HTML5-Form-Input.html
@@ -43,14 +43,14 @@
         <div>
             Suas principais habilidades:
             <br>
-            <label for="int">HTML</label>
-            <input type="checkbox" name="int" id="int" /> |
-            <label for="res">CSS</label>
-            <input type="checkbox" name="res" id="res" /> |
-            <label for="physic">JavaScript</label>
-            <input type="checkbox" name="physic" id="physic" /> |
-            <label for="edu">PHP</label>
-            <input type="checkbox" name="edu" id="edu" />
+            <label for="html">HTML</label>
+            <input type="checkbox" name="html" id="html" /> |
+            <label for="css">CSS</label>
+            <input type="checkbox" name="css" id="css" /> |
+            <label for="js">JavaScript</label>
+            <input type="checkbox" name="js" id="js" /> |
+            <label for="php">PHP</label>
+            <input type="checkbox" name="php" id="php" />
         </div>
         <br>
         <div>
