--- a/Semana 2 - CSS e Bulma/Dia-01/index.html
+++ b/Semana 2 - CSS e Bulma/Dia-01/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS</title>
-    <link rel="stylesheet" href="Dia-01-style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
