--- a/Semana 2 - CSS/Dia 3/Bulma (framework)/Hello Bulma!/index.html
+++ b/Semana 2 - CSS/Dia 3/Bulma (framework)/Hello Bulma!/index.html
@@ -21,4 +21,12 @@
     </section>
 </body>
 
+<hr>
+
+<footer>
+    <center>
+        <a href="https://github.com/serafimjp">Desenvolvido por João Paulo Serafim</a>
+    </center>
+</footer>
+
 </html>
