--- a/Semana 2 - CSS/Dia 3/Bulma (framework)/Basic Navbar/index.html
+++ b/Semana 2 - CSS/Dia 3/Bulma (framework)/Basic Navbar/index.html
@@ -73,4 +73,12 @@
     </nav>
 </body>
 
+<hr>
+
+<footer>
+    <center>
+        <a href="https://github.com/serafimjp">Desenvolvido por João Paulo Serafim</a>
+    </center>
+</footer>
+
 </html>
