--- a/Semana 2 - CSS/Dia 5/Portfólio com Bulma/contact.html
+++ b/Semana 2 - CSS/Dia 5/Portfólio com Bulma/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV - João Paulo Serafim</title>
+    <title>Portfólio - João Paulo Serafim</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/css/all.css"></script>
